HOCS-4409: Move more tab config to DB